--- a/loginpage.css
+++ b/loginpage.css
@@ -159,3 +159,111 @@ body
     border: 2px solid #333;
     scale: 1.5;
 }
+
+
+@media(max-width: 500px)
+{
+    
+.login > h1
+{
+    position: relative;
+    font-weight: 100;
+    font-size: 15px;
+    color: #fff;
+    border-left: 20px solid orange;
+    line-height: 1em;
+    border-radius: 80%;
+    padding-left: 15px;
+}
+
+.login
+{
+    position: relative;
+    background: #222;
+
+    padding: 3rem;
+    width: 300px;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+    z-index: 2;
+
+}
+
+
+.box
+{
+    position: relative;
+    padding: 5px;
+    width: 310px;
+    height: 390px;
+    overflow: hidden;
+}
+
+.box::before
+{
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 310px;
+    height: 390px;
+    background: linear-gradient(0deg,transparent,transparent,#45f3ff,#45f3ff,#45f3ff);
+    z-index: 1;
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+}
+
+.box::after
+{
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 310px;
+    height: 390px;
+    background: linear-gradient(0deg,transparent,transparent,rgb(226, 0, 166),rgb(226, 0, 166),rgb(226, 0, 166));
+    z-index: -1;
+    animation: animate 6s linear infinite;
+    animation-delay: -3s;
+    transform-origin:bottom right;
+}
+
+.options
+{
+    display: flex;
+    justify-content:space-between;   
+}
+.options a
+{
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.theme
+{
+    position: absolute;
+    top: 30px;
+    right: 7.5rem;
+    padding: 10px;
+    background:#fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 20px;
+}
+
+.theme span{
+    position: 20px;
+    width: 20px;
+    height: 20px;
+    background: var(--clr);
+    margin: 10px;
+    border-radius: 10px;
+    cursor: pointer; 
+
+}
+}
