--- a/loginpage.css
+++ b/loginpage.css
@@ -102,6 +102,7 @@ body
 
 #btn
 {
+    border-radius: 20px;
     font-size: large;
     background: orange;
     outline: none;
@@ -117,6 +118,7 @@ body
     outline: none;
     border: 2px 5px solid #888;
     font-size: 0.8em;
+    border-radius: 20px;
 }
 
 .options
@@ -180,7 +182,7 @@ body
 {
     position: relative;
     background: #222;
-
+    border-radius: 12px;
     padding: 3rem;
     width: 300px;
     height: 380px;
@@ -199,6 +201,7 @@ body
     width: 310px;
     height: 390px;
     overflow: hidden;
+    border-radius: 12px;
 }
 
 .box::before
@@ -246,8 +249,8 @@ body
 {
     position: absolute;
     top: 30px;
-    right: 7.5rem;
-    padding: 10px;
+    right: 9rem;
+    padding: 1px;
     background:#fff;
     display: flex;
     justify-content: center;
@@ -264,6 +267,10 @@ body
     margin: 10px;
     border-radius: 10px;
     cursor: pointer; 
-
 }
+.theme span.active
+{
+    border: 1px solid #333;
+    scale: 1.5;
+}    
 }
