--- a/loginpage.css
+++ b/loginpage.css
@@ -249,7 +249,7 @@ body
 {
     position: absolute;
     top: 30px;
-    right: 9rem;
+    right: 40vw;
     padding: 1px;
     background:#fff;
     display: flex;
